# reemc_tutorials

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  reemc_tutorials.rosinstall  reemc_tutorials_melodic.rosinstall
config/: imu.rviz  imu.vcg  lasers.rviz  lasers.vcg  reemc.rviz  reemc.vcg  reemc_minimal.rviz  reemc_minimal.vcg  reemc_navigation.rviz  reemc_poses.yaml  reemc_upperbody_poses.yaml  sitting_poses.yaml  sonars.rviz  sonars.vcg
data/: fullbody_2d_detection_1Hz.bag
launch/: keyboard_teleop.launch  left_ft_plot.launch  reemc_kinematic_sim.launch  reemc_look_to_point_world.launch  right_ft_plot.launch  rviz.launch
reemc_asr_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_asr_tutorials/src/: asr_walking.cpp
reemc_basic_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_basic_tutorials/config/: imu.rviz  lasers.rviz  reemc_minimal.rviz  reemc_navigation.rviz  sonars.rviz
reemc_basic_tutorials/launch/: ankle_left_ft_plot.launch  ankle_right_ft_plot.launch  base_imu_plot.launch  keyboard_teleop.launch  left_ft_plot.launch  reemc_gazebo.launch  reemc_kinematic_sim.launch  rviz.launch  wrist_left_ft_plot.launch  wrist_right_ft_plot.launch
reemc_basic_tutorials/scripts/: back_to_home.py  doorStepWalkOverStart.sh  look_at_detected_face.py  sitActionEnd.sh  test_joints_helpers.bash
reemc_basic_tutorials/src/: add_textured_object.cpp  asr_walking.cpp  asr_walking_solved.cpp  face_recognition.cpp  look_to_object.cpp  reach_pose.cpp  textured_object_detection.cpp
reemc_controllers_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml  reemc_tutorial_controller_plugins.xml
reemc_controllers_tutorials/config/: combined_resource_controller.yaml  force_controller.yaml  hello_controller.yaml  imu_controller.yaml  joint_controller.yaml
reemc_controllers_tutorials/launch/: combined_resource_controller.launch  force_controller.launch  hello_controller.launch  imu_controller.launch  joint_controller.launch
reemc_controllers_tutorials/src/: combined_resource_controller.cpp  force_torque_controller.cpp  hello_controller.cpp  imu_controller.cpp  joint_controller.cpp
reemc_effort_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  reemc_effort_controller_plugins.xml
reemc_effort_control/config/: reemc_controller_config.yaml  reemc_controller_simulation_config.yaml
reemc_effort_control/launch/: simple_effort_control.launch  simple_effort_control_simulation.launch
reemc_effort_control/src/: effot_controller_simple.cpp
reemc_motion_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
reemc_motion_tutorials/config/: example.perspective  gesture_sequence.yaml
reemc_motion_tutorials/launch/: gesture_sequence.launch  reemc_gui.launch
reemc_motion_tutorials/scripts/: motion_sequence  simple_grasp  test_lower_body_joints  test_upper_body_joints
reemc_motion_tutorials/src/: move_left_arm_with_planning.cpp  move_left_arm_without_planning.cpp
reemc_perception_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_perception_tutorials/launch/: reemc_look_to_object_world.launch
reemc_perception_tutorials/src/: add_textured_object.cpp  face_detection.cpp  fullbody_person_2d_detection.cpp
reemc_tts_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_vision_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_vision_tutorials/launch/: reemc_look_to_point_world.launch
reemc_vision_tutorials/src/: look_to_point.cpp  remote_monocular_image_visualization.cpp
reemc_walking_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
reemc_walking_tutorials/include/reemc_walking_tutorials/: LinkStatesListener.h
reemc_walking_tutorials/src/: LinkStatesListener.cpp  ik_example.cpp  safety_example.cpp  walk_client_example_action.cpp  walk_client_example_service.cpp  walk_client_example_topic.cpp
reemc_walking_tutorials/test/: five_steps_test.cpp  reemc_emptyworld_controllers.test
reemc_wbc_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml  reemc_wbc_plugins.xml
reemc_wbc_tutorials/config/: reemc_position_joints.yaml  reemc_wbc.yaml  reemc_wbc_admitance.yaml  reemc_wbc_ballgrasping.yaml  reemc_wbc_ft_imu.yaml  reemc_wbc_humanoids.yaml  reemc_wbc_humanoids_ft_imu.yaml  reemc_wbc_stabilizer.yaml  reemc_wbc_weighted.yaml
reemc_wbc_tutorials/config/capsule_descriptions/: reemc_capsule_params.txt  reemc_collision_operations_no_head.xml
reemc_wbc_tutorials/config/rviz/: reemc_wbc.rviz
reemc_wbc_tutorials/gtest/: reemc_full.urdf  reemc_stacks_gtest.cpp  reemc_stacks_gtest.h  wbc_kinematic_reemc_test.cpp
reemc_wbc_tutorials/launch/: reemc_admitance.launch  reemc_capsule_description_no_head.launch  reemc_wbc.launch  reemc_wbc_ft_imu.launch  reemc_wbc_humanoids.launch  reemc_wbc_humanoids_ft_imu.launch  reemc_wbc_standalone.launch  reemc_wbc_weighted.launch  rviz.launch
reemc_wbc_tutorials/src/: ball_grasping_demo_reemc.cpp  reemc_dynamic_stacks.cpp  reemc_stack_admitance.cpp  reemc_stack_ball_grasping.cpp  reemc_stack_boths_hands_head.cpp  reemc_stack_humanoids_dance.cpp  reemc_stack_joints.cpp  reemc_weighted_stack_boths_hands_head.cpp  teleoperation_demo.cpp  wbc_grasping_hardware_test.cpp  wbc_reemc_hardware_test.cpp
scripts/: look_at_detected_face.py  sitActionStart.sh  test_lower_body_joints  test_upper_body_joints
src/: asr_client.cpp  asr_walking.cpp  asr_walking_exercise.cpp  asr_walking_solved.cpp  face_detection.cpp  face_enrollment.cpp  face_recognition.cpp  fullbody_person_2d_detection.cpp  look_to_object.cpp  look_to_point.cpp  move_left_arm_joint_goal.cpp  reach_pose.cpp  remote_monocular_image_visualization.cpp  remote_stereo_image_visualization.cpp  textured_object_detection.cpp  tts_client.cpp  walk_client_example_action.cpp  walk_client_example_service.cpp  walk_client_example_topic.cpp
