<?xml version="1.0"?>
<package>
  <name>reemc_asr_tutorials</name>
  <version>0.0.6</version>
  <description>ROS based tutorials for REEM-C Automatic Speech Recognition application</description>

  <maintainer email="jordi.adell@pal-robotics.com">Jordi Adell</maintainer>
  <license>BSD</license>

  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>pal_interaction_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pal_interaction_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
