<?xml version="1.0"?>
<package>
  <name>reemc_basic_tutorials</name>
  <version>0.0.0</version>
  <description>ROS based tutorials for the REEM-C robot</description>

  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <license>BSD</license>

  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>walking_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <!-- launch file depends -->
  <run_depend>key_teleop</run_depend>
  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_gazebo</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>topic_tools</run_depend>

</package>
