<?xml version="1.0"?>
<package>
  <name>reemc_controllers_tutorials</name>
  <version>0.0.10</version>
  <description>The reemc_controllers_tutorials package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer> 
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>controller_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>controller_interface</run_depend>

  <export>
    <controller_interface plugin="${prefix}/reemc_tutorial_controller_plugins.xml"/>
  </export>

</package>
