<?xml version="1.0"?>
<package>
  <name>reemc_effort_control</name>
  <version>1.0.1</version>
  <description>The reemc_effort_control package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer> 

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>ddynamic_reconfigure</run_depend>

  <export>
    <controller_interface plugin="${prefix}/reemc_effort_controller_plugins.xml"/>
  </export>

</package>
