<?xml version="1.0"?>
<package>
  <name>reemc_motion_tutorials</name>
  <version>0.0.0</version>
  <description>Motion tutorials for the REEM-C robot</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <license>BSD</license>

  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- launch file depends -->
  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_gazebo</run_depend>
  <run_depend>rqt_plot</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rxtools</run_depend>

</package>
