<?xml version="1.0"?>
<package>
  <name>reemc_motion_tutorials</name>
  <version>0.1.6</version>
  <description>Motion tutorials for the REEM-C robot</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <license>BSD</license>

  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>play_motion_msgs</build_depend>

  <run_depend>axcli</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_joint</run_depend>
  <run_depend>play_motion</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_rviz</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>
  <run_depend>rqt_current_limit_controller</run_depend>
</package>
