<?xml version="1.0"?>
<package format="2">
  <name>reemc_walking_tutorials</name>
  <version>0.1.5</version>
  <description>Example code for using REEM-C walking controller</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>

  <license>BSD</license>
  <author email="luca.marchionni@pal-robotics.com">Luca Marchionni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>walking_controller</depend>
  <depend>eigen_checks</depend>
  <depend>walking_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>actionlib</depend>
  <depend>humanoid_nav_msgs</depend>
  <depend>pal_robot_tools</depend>
  <depend>rostest</depend>

  <export>
  </export>
</package>
